2013-04-01  Sancho Lerena <slerena@artica.es>

	* general/error_authconfig.php,
	general/error_dbconfig.php,	
	general/error_emptyconfig.php,
	general/error_install.php,
	general/error_noconfig.php,
	general/error_perms.php,
	general/login_page.php,
	general/logoff.php,
	include/styles/pandora.css,
	include/styles/pandora_black.css,
	include/styles/pandora_minimal.css: replaced PNG images for JPG version, much lighter.

	* images/header_f2.jpg,
	images/header_f2b.jpg,
	images/login_background.jpg: New JPG version of old PNG images.

	* images/header_f2.png,
	images/header_f2b.png,
	images/login_background.png: Removed PNG's.

2013-03-25 Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_console_installer: Fixed false recognition of RHEL6.4.
	(it had been recoginzed as Ubuntu incorrecty because of its
	"/etc/lsb-release"). Merged from trunk.

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_copy_modules.php: improve the form to
	show the fields when select a agent.
	
	* include/functions_modules.php: fixed the notices PHP.
	
	Fixes: #3607807
	
	MERGED FROM THE TRUNK

2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_modules.php: fixed the massive deletion of
	modules when only delete one module, the old code deleted all
	modules in the agents on operation.
	
	MERGED FROM THE TRUNK

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/functions.ajax.php: Added proxy
	 support and bsdtar support.

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Keep original
	 connection params when xmlrpc_client->sendPayloadHTTP10() follows
	 30x redirect.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php: added lost constant for the 10 minutes.
	
	* include/functions_users.php: fixed the first execution of
	chatlog that throw PHP notice.
	
	* include/functions_config.php: fixed PHP notices when the "homeurl"